# personal-llm

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  MASTER_LOG.md  README.md  plan.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/samples/: about-personal-llm.md
docs/: ARCHITECTURE.md  COMPETITORS.md  PRD.md  ROADMAP.md  TDD.md
docs/DECISIONS/: 0001-vector-and-graph-store.md  0002-hybrid-model-router.md  0003-agent-tool-permissions.md  0004-router-verification.md  0005-external-integrations-via-mcp-bridge.md  0006-voice-and-vision-local-first.md
src/personal_llm/: __init__.py  config.py  engine.py
src/personal_llm/agent/: __init__.py  loop.py  schemas.py
src/personal_llm/eval/: __init__.py  cases.py  harness.py
src/personal_llm/graph/: __init__.py  kg.py
src/personal_llm/integrations/: __init__.py  schemas.py  sync.py
src/personal_llm/interfaces/: api.py  app.py  cli.py
src/personal_llm/memory/: __init__.py  consolidate.py  ingest.py  interest_trends.py  retrieve.py  store.py  time_utils.py  types.py  vectors.py
src/personal_llm/prompts/: agent_system.txt  loader.py  rag_system.txt  review_system.txt
src/personal_llm/rag/: __init__.py  pipeline.py
tests/: conftest.py  test_agent.py  test_api.py  test_cli.py  test_consolidate.py  test_eval.py  test_ingest.py  test_integrations.py  test_interest_trends.py  test_kg.py  test_memory.py  test_prompts.py  test_rag.py  test_retrieve.py  test_review.py  test_router.py  test_tools.py  test_vision.py  test_voice.py
(+16 files in other folders)
